# MarketWatch

./: .gitignore  MARKET_WATCH.xlsx  README.md  build_standalone.py  config.yaml  config_clustered.yaml  flow_app.py  global_flow_dashboard.html  global_flow_monitor.py  pyproject.toml  requirements.txt  run_monitor.py  run_monitor_clustered.py  serve_dashboard.py  setup.py
.github/workflows/: deploy.yml
config/: config.yaml
docs/: .pdca-status.json
docs/01-plan/features/: code-review-enhancement.plan.md
docs/02-design/features/: code-review-enhancement.design.md
docs/03-analysis/: code-review-enhancement.analysis.md
docs/04-report/features/: code-review-enhancement.report.md
src/data/: loader.py  v8_bridge.py
src/factor/: regime_context.py  signal_loader.py
src/macro/: impulse.py  network.py  sync.py  tail.py  transfer_entropy.py  turbulence.py
src/market_monitor/: __init__.py  __main__.py  cli.py
src/market_monitor/analysis/: __init__.py  factor_network.py  impulse.py  network.py  tail_dependence.py  timeline.py  transfer_entropy.py  v8_edge_enricher.py  v8_signal.py  volatility.py
src/market_monitor/core/: __init__.py  config.py  constants.py  exceptions.py
src/market_monitor/data/: __init__.py  loader.py  v8db_loader.py
src/market_monitor/report/: __init__.py  generator.py  visualizer.py
src/market_monitor/utils/: __init__.py  logging.py
src/output/: dashboard.py  report.py
src/pattern/: matcher.py  trajectory.py
src/validation/: sanity_check.py
tests/: __init__.py  conftest.py  test_config.py  test_network.py
